Fix stats styling on mobile

--- a/expenses/src/App.scss
+++ b/expenses/src/App.scss
@@ -683,7 +683,7 @@ li.selected-suggestion {
     @media only screen and (max-width: 600px) {
       width: 100px;
       height: 100px;
-      border: 4px solid transparent;
+      border: 4px solid var(--accent-color);
       &:before {
         margin: -4px;
       }
